<resources>
    <string name="facebook_app_id">518309340447490</string>
    <string name="fb_login_protocol_scheme">fb518309340447490</string>
    <string name="facebook_client_token">de4be74252799b26577834b856783518</string>

    <string name="app_name">SW Universe</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="planets">Planets</string>
    <string name="gender">Gender</string>
    <string name="population">Population</string>
    <string name="birth_year">Birth year</string>
    <string name="avg_life_span">Avg lifespan</string>
    <string name="classification">Classification</string>
    <string name="more">more</string>
    <string name="people">People</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="search">Search…</string>
    <string name="movies">Movies</string>
    <string name="species">Species</string>
    <string name="welcome_to_star_wars_universe">Welcome to Star Wars Universe</string>
    <string name="logout">Logout</string>
    <string name="theme">Theme</string>
    <string name="theme_settings_summary">customize your theme</string>
    <string name="apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eye_color">Eye color</string>
    <string name="hair_color">Hair color</string>
    <string name="height">Height</string>
    <string name="avg_height">Avg height</string>
    <string name="home_world">Home world</string>
    <string name="skin_color">Skin color</string>
    <string name="mass">Mass</string>
    <string name="director">Director</string>
    <string name="producer">Producer</string>
    <string name="climate">Climate</string>
    <string name="diameter">Diameter</string>
    <string name="gravity">Gravity</string>
    <string name="orbital_period">Orbital Period</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="surface_water">Surface Water</string>
    <string name="terrain">Terrain</string>
    <string name="designation">Designation</string>
    <string name="language">Language</string>
    <string name="skip">Skip</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>