<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="planet"
            type="com.andrew.starwars.domain.model.PlanetModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:id="@+id/constraintLayout3"
        app:layoutDescription="@xml/fragment_person_xml_constraintlayout3_scene"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.planet.PlanetFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/personBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/istockphoto_1295851454_170667a"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintBottom_toBottomOf="@+id/personBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personBackgroundColor"
            app:src="@{planet.image}" />


        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@{planet.name}"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="@dimen/_16sdp"
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8sdp"

                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageViewClimate"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/sun_rain_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/climateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/climate"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewClimate"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/climateValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.climate}"

                        app:layout_constraintStart_toStartOf="@+id/climateTitle"
                        app:layout_constraintTop_toBottomOf="@+id/climateTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageViewDiameter"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/diameter_circle_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/DiameterTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/diameter"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewDiameter"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/DiameterValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.diameter}"

                        app:layout_constraintStart_toStartOf="@+id/DiameterTitle"
                        app:layout_constraintTop_toBottomOf="@+id/DiameterTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageViewGravity"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/gravity_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/GravityTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/gravity"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewGravity"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/GravityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.gravity}"

                        app:layout_constraintStart_toStartOf="@+id/GravityTitle"
                        app:layout_constraintTop_toBottomOf="@+id/GravityTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageOrbitalPeriod"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/loading_part_2_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/OrbitalPeriodTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/orbital_period"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageOrbitalPeriod"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/OrbitalPeriodValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.orbitalPeriod}"

                        app:layout_constraintStart_toStartOf="@+id/OrbitalPeriodTitle"
                        app:layout_constraintTop_toBottomOf="@+id/OrbitalPeriodTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageViewPopulation"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/population_statistics_people_population_covid_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/PopulationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/population"
                        app:layout_constraintStart_toEndOf="@+id/imageViewPopulation"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/PopulationValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.population}"

                        app:layout_constraintStart_toStartOf="@+id/PopulationTitle"
                        app:layout_constraintTop_toBottomOf="@+id/PopulationTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView
                        android:id="@+id/imageViewRotationPeriod"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/loading_part_2_svgrepo_com_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/RotationPeriodTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/rotation_period"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewRotationPeriod"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/RotationPeriodValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.rotationPeriod}"

                        app:layout_constraintStart_toStartOf="@+id/RotationPeriodTitle"
                        app:layout_constraintTop_toBottomOf="@+id/RotationPeriodTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView

                        android:id="@+id/imageViewSurfaceWater"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/sea_waves_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/SurfaceWaterTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/surface_water"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewSurfaceWater"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/SurfaceWaterValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.surfaceWater}"

                        app:layout_constraintStart_toStartOf="@+id/SurfaceWaterTitle"
                        app:layout_constraintTop_toBottomOf="@+id/SurfaceWaterTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                    tools:layout_editor_absoluteX="0dp">


                    <ImageView

                        android:id="@+id/imageViewSkincolor"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/color_adjustement_mode_channels_svgrepo_com"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/skinColorTitle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/terrain"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:layout_constraintStart_toEndOf="@+id/imageViewSkincolor"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/skinColorValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{planet.terrain}"

                        app:layout_constraintStart_toStartOf="@+id/skinColorTitle"
                        app:layout_constraintTop_toBottomOf="@+id/skinColorTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>